# resolv-data

./: .gitignore  Pipfile  README.md  pyproject.toml
resolv_data/: __init__.py  base.py  constants.py  utilities.py
resolv_data/datasets/: __init__.py
resolv_data/datasets/mir/: __init__.py  jsb_chorales.py  lakh_midi.py  maestro.py
resolv_data/protobuf/: __init__.py
resolv_data/protobuf/protos/: dataset_index.proto  dataset_index_pb2.py  dataset_index_pb2.pyi
src/resolv_data/: __init__.py  base.py  constants.py  utilities.py
src/resolv_data/canonical/: __init__.py  wrapper.py
src/resolv_data/canonical/adapters/mir/symbolic_music/: midi.py  musicxml.py
src/resolv_data/datasets/: __init__.py
src/resolv_data/datasets/mir/: jsb_chorales.py  lakh_midi.py  maestro.py
src/resolv_data/protobuf/: __init__.py
src/resolv_data/protobuf/protos/: compile_proto.sh  dataset_index.proto  dataset_index_pb2.py  dataset_index_pb2.pyi
src/resolv_data/scripts/: __init__.py  import_dataset.py
tests/datasets/: test_jsb_chorales.py
tests/datasets/indexes/: jsb_chorales_index.json  jsb_chorales_v1_index.json
