[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
name = "resolv-data"
version = "0.0.0.dev1"
description = "A package for Resolv containing utilities for data management."
license = "Apache-2.0"
authors = [
    "Matteo Pettenò <matteo.petteno1@gmail.com>"
]
maintainers = [
    "Matteo Pettenò <matteo.petteno1@gmail.com>"
]
readme = ["README.md", "src/README.md", "docs/README.md"]
homepage = "https://github.com/resolv-libs/resolv-data"
documentation = "https://github.com/resolv-libs/resolv-data/docs"
repository = "https://github.com/resolv-libs/resolv-data"
keywords = [
    "resolv", "rersolv-libs", "resolv-data",
    "dataset",
    "mir", "lakh-midi", "maestro", "jsb-chorales"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent"
]
packages = [
    { include = "resolv_data", from = "src" },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
protobuf = "4.25.*"
tables = "^3.9.2"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]

[tool.poetry.group.docs.dependencies]

[tool.poetry.extras]

[tool.poetry.plugins]

[tool.poetry.urls]
